# CodeJam

./: .gitignore  README.md  alienLanguage.cpp  badHorse.cpp  captainHammer.cpp  credit.cpp  dancingWithTheGooglers.cpp  dechiperGooglerese.cpp  fileFixIt.cpp  moist.cpp  qual2008_SavingUniverse.cpp  round1C_2009_AllYourBase.cpp  speakingInTongues.cpp  template.cpp  ticTacToe.cpp
ProjectEuler/: problem1  problem1.cpp  problem13  problem13.cpp  problem2  problem2.cpp  problem3  problem3.cpp  problem4  problem4.cpp  problem5  problem5.cpp  problem6  problem6.cpp  problem7  problem7.cpp  problem8  problem8.cpp  problem9  problem9.cpp
SPOJ/: 1_life  1_life.cpp
cracking/: CMakeLists.txt  chapter13_1.cpp  chapter13_1a.cpp
